# PythonEmbedding

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  vcpkg.json
Application/: CMakeLists.txt
Application/pythonScripts/: sample.py
Application/src/: main.cpp
PyInterpreter/: CMakeLists.txt
PyInterpreter/include/: PyInterpreter.h
PyInterpreter/src/: PyInterpreter.cpp
